render bug fixed

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <main id="mainContainer" class="mainContainer">
       <h2>My fancy teacup collection</h2>
       <div id="imageContainer"></div>
+      <div id="overlayContainer" class="overlay d_none"></div>
     </main>
 
     <footer>
